# pact-workshop

./: LEARNING.md  Makefile  README.md
.github/workflows/: test.yml
consumer-dotnet-kafka/: .gitignore  Makefile
consumer-dotnet-kafka/src/: KafkaConsumer.cs  ProductEventProcessor.cs  Program.cs  provider.csproj
consumer-dotnet-kafka/src/Properties/: launchSettings.json
consumer-dotnet-kafka/src/Repositories/: ProductRepository.cs
consumer-dotnet-kafka/tests/: ConsumerEventTests.cs  tests.csproj
consumer-go-kafka/: Makefile  go.mod  go.sum  handler.go  handler_test.go  kafka_consumer.go  main.go  repository.go  setup_rdkafka.ps1  user_service.go
consumer-java-kafka/: Makefile  build.gradle
consumer-js-kafka/: Makefile  package-lock.json  package.json
consumer-js-kafka/src/product/: product.handler.js  product.handler.pact.test.js  product.handler.v4.pact.test.js  product.repository.js
consumer-php-kafka/: composer.json
consumer-php-kafka/src/: consumer.php
consumer-python-kafka/: Makefile
consumer-python-kafka/tests/unit/: product_service_pact_test.py
consumer-rust-kafka/: Cargo.toml
consumer-rust-kafka-async/: Cargo.toml
consumer-rust-kafka-async/src/: main.rs
consumer-rust-kafka-sync/: Cargo.toml  Makefile
consumer-rust-kafka-sync/src/: main.rs
consumer-rust-kafka/tests/: tests.rs
provider-dotnet-kafka/: Makefile
provider-dotnet-kafka/src/: KafkaProducer.cs
provider-dotnet-kakfa/tests/: ProviderApiTests.cs
provider-go-kafka/: Makefile  README.md  go.mod  go.sum  kafka_producer.go  main.go  product_service.go  product_service_test.go  repository.go
provider-java-kafka/: Makefile  build.gradle
provider-js-kafka/: Makefile  README.md  package-lock.json  package.json  server.js
provider-python-kafka/: Makefile  README.md  pyproject.toml
provider-python-kafka/src/: server.py
provider-python-kafka/tests/: message_product_pact_test.py  provider_server.py
provider-rust-kafka/: Cargo.toml
provider-rust-kafka-async/src/: main.rs
provider-rust-kafka-sync/: Cargo.toml
provider-rust-kafka-sync/src/: main.rs
provider-rust-kafka/src/: main.rs
(+10 files in other folders)
