[package]
name = "consumer-rust-kafka-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
tokio = { version = "1.4.0" }
actix-web = "4.9.0"
actix-rt = "2.10.0"
serde = "1.0.210"
serde_json = "1.0.129"
rdkafka = { version ="~0.36.2", features=["cmake-build"] } # cmake-build required for windows

[dev-dependencies]
pact_consumer = "~1.3.1"
pact_models = "~1.2.4"
expectest = "0.12.0"
maplit = "1.0.2"
