[package]
name = "provider-rust-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
tokio = { version = "1.4.0", features=["rt-multi-thread","macros"] }
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.129"
uuid = { version ="1.11.0", features=["v4"] }
rdkafka = { version ="~0.36.2", features=["ssl", "sasl"] }

[dev-dependencies]
pact_verifier = "1.2.4"
expectest = "0.12.0"
maplit = "1.0.2"
pact_models = { version = "~1.2.4", default-features = false }
async-trait = "0.1.80"
anyhow = "1.0.82"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
base64 = "0.22.1"